# blog

./: .gitignore  Cargo.toml  README.md  build.rs  fastly.toml  flake.nix  package-lock.json  package.json
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 1y93qaxd5b7r2mcz8l2fl67fxrygryl3-source  fcaakxjwi6zi140abjnc4g9kakvvfcs0-source  lngd3xkfy9nv22qxv9zbw42cabwfyn3l-source
components/: Code.jsx  Mermaid.jsx
pages/: contact.mdx  home.mdx  i-rewrote-my-blog-again.mdx  index.jsx  oxidize-interview.mdx  page-404.mdx  rust-wasm.mdx  rusts-runtime.mdx
posts/: about.md  home.md  orphan-rules.md  rust-wasm.md  rusts-runtime.md  the-edge.md  weird-exprs.md
src/: main.rs
styles/: site.scss
