[package]
edition = "2021"
name = "blog"
publish = false
version = "0.1.0"

[dependencies]
fastly = "^0.8.6"
phf = { version = "^0.11.0", features = ["macros"] }

[build-dependencies]
flate2 = "^1.0.25"
lol_html = "^0.3.1"
maud = "^0.24.0"
pulldown-cmark = "^0.9.2"
regex = "^1.7.0"
syntect = "^5.0.0"
