[package]
edition = "2021"
name = "blog"
publish = false
version = "0.1.0"

[dependencies]
axum = "0.6.6"
phf = { version = "^0.11.0", features = ["macros"] }
tokio = "1.25.0"

[build-dependencies]
flate2 = "^1.0.25"
lol_html = "^0.3.1"
maud = "^0.24.0"
pulldown-cmark = "^0.9.2"
regex = "^1.7.0"
syntect = "^5.0.0"
